--- a/Basic_JavaScript/3JS_Output/JS_print.html
+++ b/Basic_JavaScript/3JS_Output/JS_print.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <h1>.innerText</h1>    
+    <h1>print</h1>    
     <p>paragraph</p>
 
     <button onclick="window.print()">print page</button>
