--- a/Basic_JavaScript/3JS_Output/JS_write.html
+++ b/Basic_JavaScript/3JS_Output/JS_write.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <h1>.innerText</h1>    
+    <h1>write</h1>    
     <p>paragraph</p>
 
     <button type="button" onclick="document.write(5+6)">try</button>
